--- a/Collaborative Filtering - Giovanna Try.ipynb
+++ b/Collaborative Filtering - Giovanna Try.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User-based CF RMSE: 100334865.32428344\n",
+      "Item-based CF RMSE: 395042844.5859187\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "from math import sqrt\n",
@@ -99,6 +108,26 @@
     "# RMSE on the train data\n",
     "print('User-based CF RMSE: ' + str(rmse(user_prediction, train_data_matrix)))\n",
     "print('Item-based CF RMSE: ' + str(rmse(item_prediction, train_data_matrix)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User-based CF RMSE - Test Data: 121849735.82373571\n",
+      "Item-based CF RMSE - Test Data: 401790702.6192749\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando test_data\n",
+    "print('User-based CF RMSE - Test Data: ' + str(rmse(user_prediction, test_data_matrix)))\n",
+    "print('Item-based CF RMSE - Test Data: ' + str(rmse(item_prediction, test_data_matrix)))"
    ]
   }
  ],
