--- a/Matrix Factorization.ipynb
+++ b/Matrix Factorization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -109,7 +111,7 @@
        "4                                       Comedy  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
        "4       1       50     5.0  964982931"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +456,7 @@
        "[5 rows x 9724 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +511,7 @@
     "    \n",
     "    # Get and sort the user's predictions\n",
     "    user_row_number = userID - 1 # User ID starts at 1, not 0\n",
-    "    sorted_user_predictions = preds.iloc[user_row_number].sort_values(ascending=False) # User ID starts at 1\n",
+    "    sorted_user_predictions = predictions.iloc[user_row_number].sort_values(ascending=False) # User ID starts at 1\n",
     "    \n",
     "    # Get the user's data and merge in the movie information.\n",
     "    user_data = original_ratings[original_ratings.userId == (userID)]\n",
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +843,7 @@
        "85                     Adventure|Comedy|Sci-Fi  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1062,7 @@
        "859                                   Drama|War  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,26 +1100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'test_rmse': array([0.87554355, 0.87168557, 0.88049325, 0.87707136, 0.8727878 ]),\n",
-       " 'fit_time': (4.6164538860321045,\n",
-       "  4.557048082351685,\n",
-       "  4.559048891067505,\n",
-       "  4.626682996749878,\n",
-       "  4.38098406791687),\n",
-       " 'test_time': (0.21532225608825684,\n",
-       "  0.18279194831848145,\n",
-       "  0.11783766746520996,\n",
-       "  0.12545108795166016,\n",
-       "  0.17489314079284668)}"
+       "{'test_rmse': array([0.86687433, 0.86333611, 0.8800267 , 0.87533063, 0.88174639]),\n",
+       " 'fit_time': (4.396756887435913,\n",
+       "  4.3730199337005615,\n",
+       "  4.42313289642334,\n",
+       "  4.410882949829102,\n",
+       "  4.436609983444214),\n",
+       " 'test_time': (0.22679591178894043,\n",
+       "  0.11825108528137207,\n",
+       "  0.12354207038879395,\n",
+       "  0.2053697109222412,\n",
+       "  0.2103121280670166)}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,16 +1134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x11ca21550>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0xa26dbd8d0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1685,7 @@
        "[232 rows x 4 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,16 +1696,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=1, iid=230, r_ui=None, est=4.244847012368745, details={'was_impossible': False})"
+       "Prediction(uid=1, iid=230, r_ui=None, est=4.280286887834521, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,20 +1713,6 @@
    "source": [
     "svd.predict(1, 230)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
