--- a/Collaborative Filtering - Giovanna Try.ipynb
+++ b/Collaborative Filtering - Giovanna Try.ipynb
@@ -8,10 +8,162 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Import packages\n",
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define file directories\n",
+    "MOVIELENS_DIR = ''\n",
+    "USER_DATA_FILE = './ml-1m/users.dat'\n",
+    "MOVIE_DATA_FILE = './ml-1m/movies.dat'\n",
+    "RATING_DATA_FILE = './ml-1m/ratings.dat'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Specify User's Age and Occupation Column\n",
+    "AGES = { 1: \"Under 18\", 18: \"18-24\", 25: \"25-34\", 35: \"35-44\", 45: \"45-49\", 50: \"50-55\", 56: \"56+\" }\n",
+    "OCCUPATIONS = { 0: \"other or not specified\", 1: \"academic/educator\", 2: \"artist\", 3: \"clerical/admin\",\n",
+    "                4: \"college/grad student\", 5: \"customer service\", 6: \"doctor/health care\",\n",
+    "                7: \"executive/managerial\", 8: \"farmer\", 9: \"homemaker\", 10: \"K-12 student\", 11: \"lawyer\",\n",
+    "                12: \"programmer\", 13: \"retired\", 14: \"sales/marketing\", 15: \"scientist\", 16: \"self-employed\",\n",
+    "                17: \"technician/engineer\", 18: \"tradesman/craftsman\", 19: \"unemployed\", 20: \"writer\" }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define csv files to be saved into\n",
+    "USERS_CSV_FILE = 'users.csv'\n",
+    "MOVIES_CSV_FILE = 'movies.csv'\n",
+    "RATINGS_CSV_FILE = 'ratings.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read the Ratings File\n",
+    "ratings = pd.read_csv(os.path.join(MOVIELENS_DIR, RATING_DATA_FILE), \n",
+    "                    sep='::', \n",
+    "                    engine='python', \n",
+    "                    encoding='latin-1',\n",
+    "                    names=['user_id', 'movie_id', 'rating', 'timestamp'])\n",
+    "\n",
+    "# Set max_userid to the maximum user_id in the ratings\n",
+    "max_userid = ratings['user_id'].drop_duplicates().max()\n",
+    "# Set max_movieid to the maximum movie_id in the ratings\n",
+    "max_movieid = ratings['movie_id'].drop_duplicates().max()\n",
+    "\n",
+    "# Process ratings dataframe for Keras Deep Learning model\n",
+    "# Add user_emb_id column whose values == user_id - 1\n",
+    "ratings['user_emb_id'] = ratings['user_id'] - 1\n",
+    "# Add movie_emb_id column whose values == movie_id - 1\n",
+    "ratings['movie_emb_id'] = ratings['movie_id'] - 1\n",
+    "\n",
+    "print(len(ratings), 'ratings loaded')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Save into ratings.csv\n",
+    "ratings.to_csv(RATINGS_CSV_FILE, \n",
+    "               sep='\\t', \n",
+    "               header=True, \n",
+    "               encoding='latin-1', \n",
+    "               columns=['user_id', 'movie_id', 'rating', 'timestamp', 'user_emb_id', 'movie_emb_id'])\n",
+    "print ('Saved to', RATINGS_CSV_FILE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read the Users File\n",
+    "users = pd.read_csv(os.path.join(MOVIELENS_DIR, USER_DATA_FILE), \n",
+    "                    sep='::', \n",
+    "                    engine='python', \n",
+    "                    encoding='latin-1',\n",
+    "                    names=['user_id', 'gender', 'age', 'occupation', 'zipcode'])\n",
+    "users['age_desc'] = users['age'].apply(lambda x: AGES[x])\n",
+    "users['occ_desc'] = users['occupation'].apply(lambda x: OCCUPATIONS[x])\n",
+    "print (len(users), 'descriptions of', max_userid, 'users loaded.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save into users.csv\n",
+    "users.to_csv(USERS_CSV_FILE, \n",
+    "             sep='\\t', \n",
+    "             header=True, \n",
+    "             encoding='latin-1',\n",
+    "             columns=['user_id', 'gender', 'age', 'occupation', 'zipcode', 'age_desc', 'occ_desc'])\n",
+    "print ('Saved to', USERS_CSV_FILE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "movies = pd.read_csv(os.path.join(MOVIELENS_DIR, MOVIE_DATA_FILE), \n",
+    "                    sep='::', \n",
+    "                    engine='python', \n",
+    "                    encoding='latin-1',\n",
+    "                    names=['movie_id', 'title', 'genres'])\n",
+    "print (len(movies), 'descriptions of', max_movieid, 'movies loaded.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save into movies.csv\n",
+    "movies.to_csv(MOVIES_CSV_FILE, \n",
+    "              sep='\\t', \n",
+    "              header=True, \n",
+    "              columns=['movie_id', 'title', 'genres'])\n",
+    "print ('Saved to', MOVIES_CSV_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Usecols do not match columns, columns expected but not found: ['user_id', 'rating', 'movie_id']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-226-54ac6a1fcd5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m small_data = pd.read_csv('./ratings.csv', sep=',', encoding='latin-1', nrows=20000, \n\u001b[0;32m----> 9\u001b[0;31m                       usecols=['user_id', 'movie_id','rating'])\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Fill NaN values in user_id and movie_id column with 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, tupleize_cols, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    700\u001b[0m                     skip_blank_lines=skip_blank_lines)\n\u001b[1;32m    701\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 702\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    703\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    427\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 429\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    431\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'has_index_names'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'has_index_names'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1120\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'c'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1121\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'c'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1122\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1123\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1124\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'python'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1893\u001b[0m             if (self.usecols_dtype == 'string' and\n\u001b[1;32m   1894\u001b[0m                     not set(usecols).issubset(self.orig_names)):\n\u001b[0;32m-> 1895\u001b[0;31m                 \u001b[0m_validate_usecols_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morig_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1896\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1897\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_validate_usecols_names\u001b[0;34m(usecols, names)\u001b[0m\n\u001b[1;32m   1235\u001b[0m         raise ValueError(\n\u001b[1;32m   1236\u001b[0m             \u001b[0;34m\"Usecols do not match columns, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1237\u001b[0;31m             \u001b[0;34m\"columns expected but not found: {missing}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmissing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1238\u001b[0m         )\n\u001b[1;32m   1239\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Usecols do not match columns, columns expected but not found: ['user_id', 'rating', 'movie_id']"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "%matplotlib inline\n",
@@ -20,12 +172,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "small_data = pd.read_csv('ml-latest-small/ratings.csv', sep=',', encoding='latin-1', nrows=2000, \n",
-    "                      usecols=['userId', 'movieId','rating'])\n",
+    "small_data = pd.read_csv('.ratings.csv', sep=',', encoding='latin-1', nrows=20000, \n",
+    "                      usecols=['user_id', 'movie_id','rating'])\n",
     "\n",
     "# Fill NaN values in user_id and movie_id column with 0\n",
-    "small_data['userId'] = small_data['userId'].fillna(0)\n",
-    "small_data['movieId'] = small_data['movieId'].fillna(0)\n",
+    "small_data['user_id'] = small_data['user_id'].fillna(0)\n",
+    "small_data['movie_id'] = small_data['movie_id'].fillna(0)\n",
     "\n",
     "# Replace NaN values in rating column with average of all values\n",
     "small_data['rating'] = small_data['rating'].fillna(small_data['rating'].mean())"
@@ -33,31 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import model_selection\n",
-    "train_data, test_data = model_selection.train_test_split(small_data, test_size=0.2)\n",
-    "\n",
-    "train_data = train_data.reset_index()\n",
-    "test_data = test_data.reset_index()"
+    "train_data, test_data = model_selection.train_test_split(small_data, test_size=0.3, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1600, 4)\n",
-      "(400, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create two user-item matrices, one for training and another for testing\n",
     "train_data_matrix = train_data.to_numpy(dtype=np.float, copy=True)\n",
@@ -65,7 +205,7 @@
     "\n",
     "# Check their shape\n",
     "print(train_data_matrix.shape)\n",
-    "print(test_data_matrix.shape)\n"
+    "print(test_data_matrix.shape)"
    ]
   },
   {
@@ -96,15 +236,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,33 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.1490e+03 1.0000e+01 6.2660e+03 3.0000e+00]\n",
-      " [1.4380e+03 1.5000e+01 1.7200e+02 1.0000e+00]\n",
-      " [1.3040e+03 1.1000e+01 1.5840e+03 5.0000e+00]\n",
-      " ...\n",
-      " [1.2160e+03 1.0000e+01 7.9091e+04 5.0000e+00]\n",
-      " [1.3000e+01 1.0000e+00 2.3100e+02 5.0000e+00]\n",
-      " [1.1730e+03 1.0000e+01 3.1685e+04 4.5000e+00]]\n",
-      "mean user rating: [ 1857.      406.5     726.    ... 20080.5      62.5    8218.125]\n",
-      "[[ 9.26770591e+02  8.52210757e+02  4.85643739e+03 -5.11689103e+02]\n",
-      " [ 6.86879029e+02  6.92231249e+02  2.75700805e+02 -5.16426609e+01]\n",
-      " [ 7.09903866e+02  6.96387464e+02  1.32988533e+03 -1.53245411e+02]\n",
-      " ...\n",
-      " [ 5.46008578e+03  4.44923905e+03  5.99573122e+04 -6.12515075e+03]\n",
-      " [ 2.07194271e+01  1.78911498e+01  1.75814654e+02 -1.37119572e+01]\n",
-      " [ 2.50936348e+03  2.10801235e+03  2.40889785e+04 -2.47032678e+03]]\n",
-      "User-based CF RMSE: 10787.615685251136\n",
-      "Item-based CF RMSE: 3818.002688110833\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "from math import sqrt\n",
@@ -178,22 +287,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User-based CF RMSE - Test Data: 14563.623577758292\n",
-      "Item-based CF RMSE - Test Data: 16885.761356949275\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Usando test_data\n",
     "print('User-based CF RMSE - Test Data: ' + str(rmse(user_prediction, test_data_matrix)))\n",
     "print('Item-based CF RMSE - Test Data: ' + str(rmse(item_prediction, test_data_matrix)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "User-based CF RMSE - Test Data: 15596.083426390725\n",
+    "Item-based CF RMSE - Test Data: 18101.866866058295"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "User-based CF RMSE - Test Data: 11849.808978496218\n",
+    "Item-based CF RMSE - Test Data: 13381.23167982257"
    ]
   }
  ],
