Add exemplos and linear regression attempt

--- a/Linear Regression .ipynb
+++ b/Linear Regression .ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,198 +24,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = pd.read_csv('../ml-20m/movies.csv', sep=',', encoding='latin-1', nrows=1000, \n",
+    "                      usecols=['movieId', 'genres'])\n",
+    "listAux = movies['genres'].str.split('|')\n",
+    "\n",
+    "ratings = pd.read_csv('../ml-20m/ratings.csv', sep=',', encoding='latin-1', \n",
+    "                      usecols=['movieId', 'rating', 'userId'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Comedy', 'Romance', 'Thriller', 'Drama', 'Adventure', 'Fantasy', 'Action', 'Animation', 'Children', 'Crime'}\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n"
+      "{'Comedy', 'Crime', 'IMAX', 'Film-Noir', 'Musical', 'Sci-Fi', 'Animation', 'Documentary', 'Romance', 'Horror', 'Thriller', 'Drama', 'Western', 'Action', 'Fantasy', 'Children', 'Mystery', 'War', 'Adventure'}\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>Comedy</th>\n",
-       "      <th>Romance</th>\n",
-       "      <th>Thriller</th>\n",
-       "      <th>Drama</th>\n",
-       "      <th>Adventure</th>\n",
-       "      <th>Fantasy</th>\n",
-       "      <th>Action</th>\n",
-       "      <th>Animation</th>\n",
-       "      <th>Children</th>\n",
-       "      <th>Crime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Adventure|Children|Fantasy</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Comedy|Drama|Romance</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   movieId                                       genres  Comedy  Romance  \\\n",
-       "0        1  Adventure|Animation|Children|Comedy|Fantasy       0        0   \n",
-       "1        2                   Adventure|Children|Fantasy       0        0   \n",
-       "2        3                               Comedy|Romance       0        0   \n",
-       "3        4                         Comedy|Drama|Romance       0        0   \n",
-       "4        5                                       Comedy       0        0   \n",
-       "\n",
-       "   Thriller  Drama  Adventure  Fantasy  Action  Animation  Children  Crime  \n",
-       "0         0      0          0        0       0          0         0      0  \n",
-       "1         0      0          0        0       0          0         0      0  \n",
-       "2         0      0          0        0       0          0         0      0  \n",
-       "3         0      0          0        0       0          0         0      0  \n",
-       "4         0      0          0        0       0          0         0      0  "
+       "(34, 20)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies = pd.read_csv('../ml-20m/movies.csv', sep=',', encoding='latin-1', nrows=10, \n",
-    "                      usecols=['movieId', 'genres'])\n",
-    "genreList = movies['genres'].str.split('|')\n",
-    "\n",
+    "ratings = ratings[ratings.userId == (3)]\n",
     "\n",
     "lista = set()\n",
-    "for genre in genreList:\n",
+    "for genre in listAux:\n",
     "    for i in genre:\n",
     "        lista.add(i)\n",
-    "        \n",
-    "print(lista)\n",
-    "for g in lista:\n",
-    "    movies[g] = 0\n",
+    "\n",
+    "for i in lista:\n",
+    "    movies[i] = movies['genres'].str.contains(i).astype(int)\n",
+    "\n",
+    "movies = movies.drop(['genres'], axis=1)\n",
+    "data = pd.merge(movies,ratings)\n",
+    "\n",
+    "data = data.drop(['movieId', 'userId'], axis=1)\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train: (23, 19) test (11, 19)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import model_selection\n",
+    "\n",
+    "train_data, test_data = model_selection.train_test_split(data, test_size=0.3, shuffle=False)\n",
+    "\n",
+    "result_data = train_data['rating']\n",
+    "result_test = test_data['rating']\n",
+    "train_data = train_data.drop(['rating'], axis=1)\n",
+    "test_data = test_data.drop(['rating'], axis=1)\n",
+    "print('train:', train_data.shape, 'test', test_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73.91\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matheus.nunes/Softwares/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/home/matheus.nunes/Softwares/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(train_data, result_data)\n",
+    "\n",
+    "accuracy = round(logreg.score(train_data, result_data) * 100, 2)\n",
+    "\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5. 4. 5. 3. 5. 5. 3. 5. 5. 3. 5.]\n",
+      "23    4.0\n",
+      "24    3.0\n",
+      "25    3.0\n",
+      "26    4.0\n",
+      "27    5.0\n",
+      "28    5.0\n",
+      "29    3.0\n",
+      "30    4.0\n",
+      "31    5.0\n",
+      "32    5.0\n",
+      "33    3.0\n",
+      "Name: rating, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg_preds = logreg.predict(test_data)\n",
+    "print(logreg_preds)\n",
+    "print(result_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = list(zip(y, logreg_preds_train))\n",
+    "lista\n",
+    "\n",
+    "acertos = 0\n",
+    "total = 0\n",
+    "for linha in lista:\n",
+    "    if linha[0] == linha[1]:\n",
+    "        acertos += 1\n",
+    "    total += 1\n",
     "    \n",
-    "copyM = movies.copy(deep=False)\n",
-    "for index, row in movies.iterrows():\n",
-    "    for g in row['genres'].split('|'):\n",
-    "        print(copyM.loc[index, :][g])\n",
-    "    \n",
-    "copyM.head()"
+    "acuracia = acertos / total\n",
+    "print(\"total: \" + str(total))\n",
+    "print(\"acertos: \" + str(acertos))\n",
+    "print(\"acuracia: \" + str(acuracia) + \"%\")"
    ]
   }
  ],
