--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,50 +73,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "365                               Black Beauty (1994)\n",
+      "\n",
+      " 365                               Black Beauty (1994)\n",
       "396                                 Free Willy (1993)\n",
       "498                                      Andre (1994)\n",
       "773     Homeward Bound: The Incredible Journey (1993)\n",
       "1170                                     Buddy (1997)\n",
       "Name: title, dtype: object\n",
-      "365                               Black Beauty (1994)\n",
+      "\n",
+      " 365                               Black Beauty (1994)\n",
       "396                                 Free Willy (1993)\n",
       "498                                      Andre (1994)\n",
       "773     Homeward Bound: The Incredible Journey (1993)\n",
       "1170                                     Buddy (1997)\n",
       "Name: title, dtype: object\n",
-      "25                     Othello (1995)\n",
+      "\n",
+      " 25                     Othello (1995)\n",
       "30             Dangerous Minds (1995)\n",
       "36    Cry, the Beloved Country (1995)\n",
       "39                 Restoration (1995)\n",
       "50                     Georgia (1995)\n",
       "Name: title, dtype: object\n",
-      "986                                  Ben-Hur (1959)\n",
+      "\n",
+      " 986                                  Ben-Hur (1959)\n",
       "1331               Man in the Iron Mask, The (1998)\n",
       "1488                 Poseidon Adventure, The (1972)\n",
       "1494    Seven Samurai (Shichinin no samurai) (1954)\n",
       "1772                     Emerald Forest, The (1985)\n",
       "Name: title, dtype: object\n",
-      "141          Free Willy 2: The Adventure Home (1995)\n",
+      "\n",
+      " 141          Free Willy 2: The Adventure Home (1995)\n",
       "365                              Black Beauty (1994)\n",
       "396                                Free Willy (1993)\n",
       "498                                     Andre (1994)\n",
       "773    Homeward Bound: The Incredible Journey (1993)\n",
       "Name: title, dtype: object\n",
-      "153     Mighty Morphin Power Rangers: The Movie (1995)\n",
+      "\n",
+      " 153     Mighty Morphin Power Rangers: The Movie (1995)\n",
       "3481                        3 Ninjas Knuckle Up (1995)\n",
       "320                            Jungle Book, The (1994)\n",
       "1302       3 Ninjas: High Noon On Mega Mountain (1998)\n",
       "3479                                   3 Ninjas (1992)\n",
       "Name: title, dtype: object\n",
-      "153     Mighty Morphin Power Rangers: The Movie (1995)\n",
+      "\n",
+      " 153     Mighty Morphin Power Rangers: The Movie (1995)\n",
       "3481                        3 Ninjas Knuckle Up (1995)\n",
       "1302       3 Ninjas: High Noon On Mega Mountain (1998)\n",
       "3479                                   3 Ninjas (1992)\n",
@@ -127,19 +134,19 @@
    ],
    "source": [
     "#Testando a validade do recomendador com sequels\n",
-    "print(genre_recommendations('Free Willy (1993)').head(5)) #aventura, infantil, drama\n",
-    "print(genre_recommendations('Free Willy 2: The Adventure Home (1995)').head(5)) #aventura, infantil, drama \n",
+    "print(\"\\n\",genre_recommendations('Free Willy (1993)').head(5)) #aventura, infantil, drama\n",
+    "print(\"\\n\",genre_recommendations('Free Willy 2: The Adventure Home (1995)').head(5)) #aventura, infantil, drama \n",
     "\n",
-    "print(genre_recommendations('Karate Kid, The (1984)').head(5)) #drama \n",
-    "print(genre_recommendations('Karate Kid, Part II, The (1986)').head(5)) #acao, aventura, drama\n",
-    "print(genre_recommendations('Karate Kid, Part III, The (1989)').head(5)) #acao, aventura, infantil, drama\n",
-    "print(genre_recommendations('Next Karate Kid, The (1994)').head(5)) #acao, infantil, romance\n",
-    "print(genre_recommendations('Karate Kid, The (2010)').head(5)) #acao, infantil, drama"
+    "print(\"\\n\",genre_recommendations('Karate Kid, The (1984)').head(5)) #drama \n",
+    "print(\"\\n\",genre_recommendations('Karate Kid, Part II, The (1986)').head(5)) #acao, aventura, drama\n",
+    "print(\"\\n\",genre_recommendations('Karate Kid, Part III, The (1989)').head(5)) #acao, aventura, infantil, drama\n",
+    "print(\"\\n\",genre_recommendations('Next Karate Kid, The (1994)').head(5)) #acao, infantil, romance\n",
+    "print(\"\\n\",genre_recommendations('Karate Kid, The (2010)').head(5)) #acao, infantil, drama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +291,13 @@
     "\tprint(genre_recommendations(name).head(5))\n",
     "\tprint(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -295,14 +309,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15+"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
